# fractal

./: Cargo.toml  README.md  colors.txt
src/: constants.rs  fractals.rs  helpers.rs  main.rs  mandelbrot.rs  renderer.rs
