[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
incremental = true
lto = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
rpath = false

[profile.release]
incremental = true
lto = true
codegen-units = 1


[dependencies]
num = "0.4.0"
image = "0.24.6"
raster = "0.2.0"
gif = "0.12.0"
qd = "*"